--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@
 }
 
 :root {
-    --primary-color: #7264d6;
+    --primary-color: #212832;
+    --second-color: #7264d6;
 }
 
 html {
@@ -22,4 +23,130 @@ select,
 button {
     font-size: inherit;
     font-family: inherit;
+}
+
+/* ===========Common=========== */
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+
+.btn {
+    --height: 58px;
+
+    display: inline-block;
+    text-align: center;
+    min-width: 149px;
+    height: var(--height);
+    color: #fff;
+    background: var(--primary-color);
+    padding: 0 20px;
+    font-weight: 600;
+    line-height: var(--height);
+    border-radius: 8px;
+}
+
+.btn:hover {
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+.section__heading {
+    color: var(--primary-color);
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 1.25;
+}
+
+.section__desc {
+    color: #696d76;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67;
+}
+
+/* =============Header=============== */
+
+.header {
+    position: sticky;
+    top: -30px;
+    z-index: 3;
+}
+
+.header.scrolled {
+    /* CSS cho header khi có background */
+    background: #fcf9f9;
+    opacity: 0.9;
+    /* Thêm các thuộc tính khác nếu cần */
+}
+
+.header__inner {
+    display: flex;
+    align-items: center;
+    padding: 42px 0 12px;
+}
+
+.navbar {
+    margin-left: auto;
+}
+
+.navbar__list {
+    display: flex;
+    align-items: center;
+}
+
+.navbar__link {
+    position: relative;
+    display: inline-block;
+    color: #696d76;
+    padding: 8px 24px;
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.navbar__link:hover,
+.navbar__link.active {
+    color: var(--primary-color);
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.navbar__link.active::before {
+    /* display: inline-block; */
+    content: "";
+    position: absolute;
+    left: 24px;
+    bottom: 0;
+    width: 47px;
+    height: 1px;
+    border-radius: 0.5px;
+    background: var(--second-color);
+}
+
+.header__action {
+    display: flex;
+    align-items: center;
+    margin-left: 430px;
+}
+
+.header__action-login {
+    color: var(--primary-color);
+    font-weight: 600;
+    line-height: 1.75px;
+}
+
+.header__action-login:hover {
+    opacity: 0.9;
+}
+
+.header__action__signup {
+    --height: 52px;
+    min-width: 113px;
+    border-radius: 6px;
+    margin-left: 28px;
 }
