--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 :root {
     --primary-color: #212832;
     --second-color: #7264d6;
+    --text-color: #696d76;
 }
 
 html {
@@ -65,7 +66,7 @@ a {
 }
 
 .section__desc {
-    color: #696d76;
+    color: var(--text-color);
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 1.67;
@@ -104,7 +105,7 @@ a {
 .navbar__link {
     position: relative;
     display: inline-block;
-    color: #696d76;
+    color: var(--text-color);
     padding: 8px 24px;
     font-weight: 400;
     line-height: 1.75;
@@ -149,4 +150,214 @@ a {
     min-width: 113px;
     border-radius: 6px;
     margin-left: 28px;
+}
+
+/* ============Hero============ */
+
+.hero {
+    padding: 64px 0;
+}
+
+.hero__inner {
+    display: flex;
+    align-items: center;
+    column-gap: 60px;
+}
+
+.hero__content {
+    width: 46%;
+}
+
+.hero__media {
+    width: 54%;
+    height: 562px;
+    position: relative;
+}
+
+.hero__title {
+    display: flex;
+    align-items: center;
+    color: var(--text-color);
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.hero__title::before {
+    content: "";
+    width: 18px;
+    height: 2px;
+    background: var(--text-color);
+    margin-right: 12px;
+}
+
+.hero__heading {
+    width: 500px;
+    margin-top: 12px;
+    color: var(--primary-color);
+    font-size: 6rem;
+    font-weight: 700;
+    line-height: 1.17;
+}
+
+.hero__heading-highlight {
+    color: var(--second-color);
+}
+
+.hero__desc {
+    margin-top: 20px;
+}
+
+.subscribe-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 40px;
+    width: 540px;
+    height: 74px;
+    border-radius: 8px;
+    background: transparent;
+    box-shadow: 0px 16px 42px 0px rgba(0, 0, 0, 0.07);
+}
+
+.subscribe-form__input {
+    font-size: 1.8rem;
+    width: 100%;
+    height: 100%;
+    padding: 0 23px;
+    border-radius: inherit;
+    border: none;
+    outline: none;
+}
+
+.subscribe-form__input::placeholder {
+    color: var();
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.subscribe-form__submit {
+    width: 149px;
+    height: 58px;
+    color: #fff;
+    font-weight: 600;
+    line-height: 1.75; /* 175% */
+    background: var(--second-color);
+    border-radius: inherit;
+    margin-right: 8px;
+    border: none;
+    outline: none;
+}
+
+.subscribe-form__submit:hover {
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+.hero__private {
+    margin-top: 20px;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1.71;
+}
+
+.hero__img-wrap {
+    margin-left: 100px;
+}
+
+.hero__img {
+    display: block;
+    width: 296px;
+}
+
+.hero__desposite {
+    position: absolute;
+    top: 113px;
+    left: 0;
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+    padding: 16px 10px;
+    width: 174px;
+    height: 46px;
+    border-radius: 6px;
+    background: #fff;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.07);
+}
+
+.hero__desposite-row {
+    display: flex;
+    align-items: center;
+}
+
+.hero__desposite-label {
+    color: #31456a;
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.desposite-price {
+    color: #4ab5e3;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1;
+    margin-left: 19px;
+}
+
+.hero__secured {
+    position: absolute;
+    right: 100px;
+    bottom: 61px;
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    width: 124px;
+    height: 68px;
+    padding: 20px 14px;
+    border-radius: 10px;
+    background: #439f90;
+}
+
+.hero__secured-price {
+    color: #fff;
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.hero__secured-heading {
+    margin-top: 5px;
+    color: #fff;
+    font-size: 0.8rem;
+    font-weight: 400;
+    line-height: 1;
+}
+
+.hero__interest {
+    position: absolute;
+    top: 127px;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    background: #da6464;
+}
+
+.hero__interest-percent {
+    display: block;
+    color: #fff;
+    font-size: 4.4rem;
+    font-weight: 600;
+}
+
+.hero__interest-label {
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: 400;
 }
