--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ a {
 }
 
 .section__heading {
+    margin-top: 12px;
     color: var(--primary-color);
     font-size: 4rem;
     font-weight: 700;
@@ -360,4 +361,156 @@ a {
     color: #fff;
     font-size: 1.6rem;
     font-weight: 400;
+}
+
+/* ==================Work=============== */
+
+.work {
+    margin-top: 160px;
+}
+
+.work__inner {
+    display: flex;
+    align-items: center;
+    column-gap: 130px;
+}
+
+.work__media {
+    width: 49%;
+}
+
+.work__img-wrap {
+    position: relative;
+    width: 470px;
+}
+
+.work__img-wrap::before {
+    content: url(/assets/img/work-bg.png);
+    position: absolute;
+    width: 100%;
+    height: 89%;
+    bottom: -5px;
+    z-index: -1;
+}
+
+.work__img {
+    display: block;
+    margin: 0 auto;
+    width: calc(100% - 14px);
+    height: 100%;
+}
+
+.work__content {
+    width: 40%;
+}
+
+.work__square {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 76px;
+    right: 62px;
+    width: 64px;
+    height: 64px;
+    background: var(--second-color);
+    border-radius: 8px;
+}
+.work__square-small {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+    background: #fff;
+}
+
+.work__check {
+    position: absolute;
+    bottom: 96px;
+    right: -100px;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    column-gap: 10px;
+    width: 226px;
+    height: 70px;
+    border-radius: 8px;
+    background: #fffdfa;
+    box-shadow: 0px 14px 34px 0px rgba(0, 0, 0, 0.07);
+}
+
+.work__check-square {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 6px;
+    background: #4ab5e3;
+}
+
+.work__check-circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #fff;
+}
+
+.work__check-title {
+    color: var(--primary-color);
+    font-family: "Inter", sans-serif;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.work__check-desc {
+    margin-top: 5px;
+    color: var(--text-color);
+    font-family: "Inter", sans-serif;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+.section__title {
+    display: flex;
+    align-items: center;
+    color: var(--text-color);
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.section__title::before {
+    content: "";
+    width: 18px;
+    height: 2px;
+    margin-right: 12px;
+    background: var(--text-color);
+}
+
+.work__list {
+    margin-top: 70px;
+}
+
+.work-item {
+    margin-top: 30px;
+}
+
+.work-item__heading {
+    color: var(--primary-color);
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 1.45;
+}
+
+.work-item__desc {
+    color: var(--text-color);
+    font-weight: 400;
+    line-height: 1.75;
+    margin-top: 16px;
 }
