--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,8 @@ a {
     border-radius: 8px;
 }
 
-.btn:hover {
+.btn:hover,
+.client-order {
     cursor: pointer;
     opacity: 0.9;
 }
@@ -765,4 +766,132 @@ a {
     border-radius: 999px;
     background: var(--second-color);
     box-shadow: 0px 15px 40px 0px rgba(0, 0, 0, 0.1);
+}
+
+/* =================Client============== */
+
+.client {
+    margin-top: 160px;
+    text-align: center;
+}
+
+.client__top-title {
+    justify-content: center;
+}
+
+.client__top-desc {
+    display: inline-block;
+    width: 435px;
+    margin-top: 18px;
+    font-size: 1.6rem;
+    line-height: 1.75;
+}
+
+.client__inner {
+    margin-top: 70px;
+}
+
+.client__list {
+    display: flex;
+    flex-wrap: nowrap;
+    column-gap: 30px;
+    overflow: hidden;
+}
+
+.client-item {
+    flex: 0 0 auto; /* Không cho phần tử co dãn, giữ kích thước gốc */
+    width: calc(50% - 15px);
+}
+
+.client-item__review {
+    position: relative;
+    padding: 42px 28px;
+    color: var(--text-color);
+    text-align: center;
+    font-style: italic;
+    font-size: 2.2rem;
+    font-weight: 400;
+    line-height: 1.55;
+    background: #fff;
+    border: 1px solid #dfe2e8;
+    border-radius: 4px;
+    z-index: 1;
+}
+
+.client-item__review::before {
+    content: "";
+    position: absolute;
+    width: 82px;
+    height: 82px;
+    bottom: -42px;
+    left: 50%;
+    transform: translateX(-50%) rotate(54deg) skew(16deg);
+    background: #fff;
+
+    border-right: 1px solid #dfe2e8;
+    border-bottom: 1px solid #dfe2e8;
+    border-radius: 0 0 4px 0;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.client-item__review:hover::before {
+    border-color: #fff; /* Loại bỏ border khi hover */
+}
+.client-item__review:hover {
+    border-color: #fff;
+    filter: drop-shadow(0px 22px 54px rgba(0, 0, 0, 0.07));
+}
+
+.client-item__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 96px;
+}
+
+.client__avatar {
+    padding-top: 12px;
+    width: 104px;
+    height: 104px;
+    border-radius: 52px;
+    object-fit: cover;
+}
+
+.client-item:nth-child(odd) .client__avatar {
+    background: #4ab5e3;
+}
+
+.client-item:nth-child(even) .client__avatar {
+    background: #439f90;
+}
+
+.client__name {
+    margin-top: 20px;
+    color: #070052;
+    font-size: 2.6rem;
+    font-weight: 600;
+    line-height: 1.38; /* 138.462% */
+}
+
+.client__occupation {
+    margin-top: 2px;
+}
+
+.client-order {
+    display: flex;
+    justify-content: center;
+    margin-top: 38px;
+    column-gap: 12px;
+}
+
+.client-order__item {
+    width: 22px;
+    height: 6px;
+    border: 1px solid #9b9fab;
+    border-radius: 1px;
+}
+
+.client-order__item.active {
+    background: #7264d6;
 }
