--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,10 +51,12 @@ a {
     font-weight: 600;
     line-height: var(--height);
     border-radius: 8px;
+    border: none;
 }
 
 .btn:hover,
-.client-order {
+.client-order,
+.blog-item__link {
     cursor: pointer;
     opacity: 0.9;
 }
@@ -894,4 +896,108 @@ a {
 
 .client-order__item.active {
     background: #7264d6;
+}
+
+/* =================Blog============= */
+
+.blog {
+    margin-top: 160px;
+}
+
+.blog__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.blog__content {
+    width: 435px;
+}
+
+.blog__heading {
+    margin-top: 6px;
+}
+
+.blog__desc {
+    margin-top: 18px;
+    color: #696d76;
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.blog__btn {
+    min-width: 123px;
+}
+
+.blog__list {
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+}
+
+.blog-item {
+    display: flex;
+    align-items: center;
+    column-gap: 22px;
+    padding: 28px;
+    border-radius: 12px;
+    border: 1px solid #dfe2e8;
+    background: #fff;
+}
+
+.blog-item:hover {
+    box-shadow: 0px 20px 50px 0px #00000012;
+    border-color: #fff;
+}
+
+.blog-item:hover .blog-item__img {
+    transform: scale(1.1);
+}
+
+.blog-item:hover .blog-item__link {
+    color: var(--second-color);
+}
+
+.blog-item__thumb {
+    width: 160px;
+    height: 160px;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.blog-item__img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    object-fit: cover;
+    transition: all 0.25s;
+}
+
+.blog-item__info {
+    width: 332px;
+}
+
+.blog-item__time,
+.blog-item__link {
+    color: var(--text-color);
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.71;
+}
+
+.blog-item__heading {
+    display: block;
+    margin-top: 10px;
+    color: var(--primary-color);
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+}
+
+.blog-item__link {
+    display: block;
+    margin-top: 20px;
+    line-height: 1.62;
 }
